sample/retrieveUnpackaged/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>PAM__Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAM__Level_Code_Null__c</fullName>
        <formula>IF( PAM__Level__c  = NULL,0, PAM__Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level Code Null</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAM__Level_Description__c</fullName>
        <formula>CASE (PAM__Level__c,
0,&quot;Pending&quot;,
1,&quot;Sent&quot;,
2,&quot;Opened&quot;,
3,&quot;Clicked&quot;,
4,&quot;Completed&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Level_Label__c</fullName>
        <description>Status label for report sorting purposes</description>
        <formula>IF(PAM__Level_Code_Null__c=0, &quot;1. Pending&quot;,(IF(PAM__Level_Code_Null__c=1, &quot;2. Sent&quot;,(IF(PAM__Level_Code_Null__c=2, &quot;3. Opened&quot;,(IF(PAM__Level_Code_Null__c=3, &quot;4. Clicked&quot;,(IF(PAM__Level_Code_Null__c=4, &quot;5. Completed&quot;,null)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status label for report sorting purposes</inlineHelpText>
        <label>Level Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Level Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAM__Reason_Code_Null__c</fullName>
        <formula>IF( PAM__Reason__c  = NULL,0, PAM__Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Code Null</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAM__Reason_Description__c</fullName>
        <description>Reason for not reaching the members inbox</description>
        <formula>CASE (PAM__Reason__c,
0,&quot;Not Synced&quot;,
1,&quot;&quot;,
3,&quot;Inactive&quot;,
20,&quot;invalid&quot;,
21,&quot;Invalid MX&quot;,
22,&quot;Missing Email&quot;,
23,&quot;Bounced&quot;,
24,&quot;Duplicate&quot;,
25,&quot;Opt Out - Direct&quot;,
31,&quot;Opt Out - Campaign&quot;,
38,&quot;Opt Out - Complaint&quot;,
39,&quot;Opt Out - Indirect&quot;,
40,&quot;Opt Out - Previous&quot;,
41,&quot;Bounce - Previous&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reason for not reaching the members inbox</inlineHelpText>
        <label>Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Reason__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reason Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Customer_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Customer Relationship</label>
        <referenceTo>Person_Customer_Relationship__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>